Fixed bug #72028 (pg_query_params(): NULL converts to empty string)

I don't have a pgsql server by hand, so no test script, but the fix must
be right.